🐛 Fix Welcome Page on mobile

--- a/kmfrontend/src/frontend/styles/start/Start.scss
+++ b/kmfrontend/src/frontend/styles/start/Start.scss
@@ -49,7 +49,7 @@
 				max-width: 100%;
 			}
 
-			@media (max-width: $mugen-breakpoint-small) {
+			@media (max-width: $mugen-breakpoint-large) {
 				text-align: center;
 				img {
 					max-width: 250px;
@@ -79,6 +79,10 @@
 					display: flex;
 					flex-direction: row;
 					justify-content: flex-end;
+					@media (max-width: $mugen-breakpoint-large) {
+						justify-content: flex-start;
+						flex-wrap: wrap;
+					}
 					list-style: none;
 					li {
 						margin-right: 1em;
@@ -127,7 +131,6 @@
 
 		.main {
 			grid-area: main;
-
 			display: flex;
 			height: 100%;
 		}
